# wind-power-plant

./: CMakeLists.txt  README.md  package.xml
scripts/: #gondola_direction_server.py#  gondola_direction_server.py  gondola_direction_server.py~  turn_gondola_server.py  wind_power_plant_controller.py  wind_power_plant_controller.py~
src/config/: empty_world.launch  wind_power_plant.launch  wind_turbine.launch  windy_world.launch
src/meshes/: arrow.dae
src/models/wind_arrow/: model.config  model.sdf
src/models/wind_power_plant/: model.config  model.sdf
src/models/wind_power_plant/meshes/: gondola.dae  tower.dae  turbine.dae
src/worlds/: CMakeLists.txt  plugin.world  wind_arrow_model.cc  wind_power_plant.world  wind_turbine.world  windy.world
srv/: GondolaDirection.srv  TurnGondola.srv
